tests/baselines/reference/parserRegularExpressionDivideAmbiguity4.errors.txt
parserRegularExpressionDivideAmbiguity4.ts(1,1): error TS2304: Cannot find name 'foo'.
parserRegularExpressionDivideAmbiguity4.ts(1,5): error TS1161: Unterminated regular expression literal.


==== parserRegularExpressionDivideAmbiguity4.ts (2 errors) ====
    foo(/notregexp);
    ~~~
!!! error TS2304: Cannot find name 'foo'.
        ~~~~~~~~~~
!!! error TS1161: Unterminated regular expression literal.